# bios-settings-mgr

./: .upstream-base-commit  meson.build  meson.options  meson_options.txt
include/: asio_connection.hpp  boot_option.hpp  manager.hpp  manager_serialize.hpp  rfutility.hpp  utility.hpp
src/: boot_option.cpp  manager.cpp  manager_serialize.cpp  password.cpp  rfutility.cpp  utility.cpp
