option('bios-persist-path', type : 'string', description : 'The filesystem path to persist the bios-settings-manager object', value : '/var/lib/bios-settings-manager')
option('clear-pending-bootorder-on-update', type : 'feature', value : 'disabled', description : 'Enable/disable remove bootOrder pending list on setting active bootorder.')